# JobSeekingAgent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/api/: auth.ts  jobAutomation.ts
apps/web/src/components/: PageHeader.tsx  ServiceCard.tsx
apps/web/src/pages/: AddLeadPage.tsx  AiPage.tsx  ApplicationTrackerPage.tsx  CommunicationPage.tsx  DashboardPage.tsx  IdentityPage.tsx  JobAutomationPage.tsx  JobSearchPage.tsx  LandingPage.tsx  LoginPage.tsx  MaterialsPage.tsx  PaymentsPage.tsx  ProfilePage.tsx  ProfileSetupPage.tsx  RegisterPage.tsx  SavedJobsPage.tsx  VerifyEmailPage.tsx  VerifyPendingPage.tsx
apps/web/src/routes/: AppRouter.tsx
apps/web/src/styles/: app.css
infra/: docker-compose.yml
infra/docker/: ai-service.Dockerfile  crawler-service.Dockerfile  python-service.Dockerfile  web.Dockerfile
infra/mysql/init/: 01-create-databases.sql
infra/nginx/: web.conf
services/ai-service/src/ai_service/: main.py  settings.py  worker.py
src/jobseeking_agent/: __init__.py  __main__.py  cli.py  config.py  desktop_app.py  profile.py  web_app.py
src/jobseeking_agent/ai/: __init__.py  cover_letter_generator.py  gemini_cover_letter.py  job_scorer.py  resume_matcher.py
src/jobseeking_agent/app/: __init__.py  bootstrap.py
src/jobseeking_agent/application/: __init__.py  autofill.py  submitter.py  uploader.py
src/jobseeking_agent/database/: __init__.py  db.py  models.py
src/jobseeking_agent/db/: __init__.py  connection.py  models.py  repository.py  schema.py
src/jobseeking_agent/desktop/: __init__.py  main_window.py  styles.py  widgets.py
src/jobseeking_agent/frontend/: __init__.py
src/jobseeking_agent/search/: __init__.py  ats_resolver.py  company_careers.py  company_site_scraper.py  description_formatter.py  jobspy_provider.py  keyword_search.py  linkedin_scraper.py  safe_search.py  seek_scraper.py  state.py
src/jobseeking_agent/services/: __init__.py  application_service.py  cover_letter_service.py  job_service.py  search_service.py
src/jobseeking_agent/tracker/: __init__.py  application_tracker.py  status_manager.py
src/jobseeking_agent/utils/: __init__.py  browser.py  exporter.py  file_manager.py  job_urls.py  logger.py
tests/: test_ai.py  test_company_careers.py  test_config.py  test_database.py  test_exporter.py  test_gemini_cover_letter.py  test_jobspy_provider.py  test_profile.py  test_safe_search.py
(+23 files in other folders)
