[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobseeking-agent"
version = "0.1.0"
description = "Cross-platform job scraping, matching, resume submission, and application tracking agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "httpx==0.27.2",
    "playwright==1.47.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "rich==13.8.1",
    "typer==0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.8",
]

[project.scripts]
jobseek = "jobseeking_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
