[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobseeking-agent"
version = "0.1.0"
description = "Cross-platform job scraping, matching, resume submission, and application tracking agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "boto3==1.35.57",
    "celery==5.4.0",
    "click==8.1.7",
    "fastapi==0.115.4",
    "google-genai==1.53.0",
    "httpx==0.28.1",
    "langchain==0.3.7",
    "langchain-google-genai==2.0.4",
    "langchain-postgres==0.0.12",
    "langgraph==0.2.45",
    "openpyxl==3.1.5",
    "playwright==1.47.0",
    "psycopg[binary]==3.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "PyMySQL==1.1.1",
    "python-dotenv==1.0.1",
    "redis==5.2.0",
    "rich==13.8.1",
    "SQLAlchemy==2.0.36",
    "stripe==11.2.0",
    "typer==0.12.5",
    "uvicorn[standard]==0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.8",
]

[project.scripts]
jobseek = "jobseeking_agent.cli:app"

[tool.setuptools.packages.find]
where = [
    "src",
    "packages/platform_common/src",
    "services/identity-service/src",
    "services/communication-service/src",
    "services/ai-service/src",
    "services/crawler-service/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"services/crawler-service/src/crawler_service/admin_ui.py" = ["E501"]
